Jdk 17 migration