@@ -8,13 +8,13 @@
   <name>page-factory-2-example</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <pf2.version>16.6.1</pf2.version>
+    <aspectj.version>1.9.9.1</aspectj.version>
+    <aspectj.plugin.version>1.14.0</aspectj.plugin.version>
     <surefire.version>2.22.1</surefire.version>
-    <pf2.version>16.5.0</pf2.version>
-    <aspectj.version>1.9.2</aspectj.version>
-    <aspectj.plugin.version>1.12.6</aspectj.plugin.version>
-    <allure.version>2.12.0</allure.version>
+    <allure.version>2.13.0</allure.version>
   </properties>
   <repositories>
     <repository>
@@ -29,6 +29,11 @@
     </repository>
   </repositories>
   <dependencies>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.9.9.1</version>
+    </dependency>
     <dependency>
       <groupId>ru.sbtqa.tag.pagefactory</groupId>
       <artifactId>web-plugin</artifactId>
@@ -78,6 +83,7 @@
         <version>${surefire.version}</version>
         <configuration>
           <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
             -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm --plugin pretty"
           </argLine>
@@ -100,7 +106,7 @@
         </dependencies>
       </plugin>
       <plugin>
-        <groupId>com.nickwongdev</groupId>
+        <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>${aspectj.plugin.version}</version>
         <configuration>
